--- a/server/package.json
+++ b/server/package.json
@@ -20,7 +20,9 @@
     "http-status-codes": "^2.3.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.6.3",
-    "nodemailer": "^6.9.7"
+    "nodemailer": "^6.9.7",
+    "passport": "^0.6.0",
+    "passport-local": "^1.0.0"
   },
   "devDependencies": {
     "morgan": "^1.10.0",
