Working on auth

--- a/client/package.json
+++ b/client/package.json
@@ -42,11 +42,7 @@
     ]
   },
   "devDependencies": {
-    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "tailwindcss": "^3.3.3"
   },
-  "options": {
-    "allowedHosts": ["localhost", ".localhost"],
-    "proxy": "https://localhost:5000/"
-  }
+  "proxy": "http://localhost:5000/"
 }
