--- a/.gitignore
+++ b/.gitignore
@@ -19,9 +19,16 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-# SERVER
+# SERVER NOSQL
 server/node_modules
 server/package-lock.json
 server/.env
 # server/public/build
 server/tmp
+
+# SERVER SQL
+server-sql/node_modules
+server-sql/package-lock.json
+server-sql/.env
+# server-sql/public/build
+server-sql/tmp
